# package-tutorial

./: README.md  setup.cfg
src/example_package/: example.py
src/package_tutorial_emumily.egg-info/: PKG-INFO  SOURCES.txt
