[metadata]
name = package-tutorial-emumily
version = 0.0.1
author = Emily Tang
author_email = tangemily@ymail.com
description = package-tutorial
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emumily/package-tutorial
project_urls =
    Bug Tracker =  https://github.com/emumily/package-tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src